# sgx-detect

./: .gitignore  Makefile  README.md  rust-toolchain
app/: Cargo.toml  build.rs
app/src/: main.rs
dockerfile/: sgx_detect.Dockerfile
enclave/: Cargo.toml  Enclave.edl
enclave/src/: cert.rs  constants.rs  lib.rs  pib.rs
